# DeepTrace-DPI

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: labels.csv
include/: blocking_engine.h  dns_parser.h  flow_tracker.h  packet_parser.h  pcap_reader.h  pcap_writer.h  sni_extractor.h  types.h
scripts/: bench.ps1  eval.py
src/: blocking_engine.cpp  dns_parser.cpp  flow_tracker.cpp  main.cpp  packet_parser.cpp  pcap_reader.cpp  pcap_writer.cpp  sni_extractor.cpp
tests/: test_main.cpp
